@@ -6,7 +6,6 @@ import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.OutputStreamWriter;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import javax.script.ScriptEngineManager;
 
@@ -32,15 +31,15 @@ public class selecter extends config {
     var out = new ArrayList<String>();
 
     queue.forEach((que) -> {
-      var que_tmp = new ArrayList<>(Arrays.asList(que.split("-")));
-      var url = new ArrayList<String>(List.of(""));
-      var date = new ArrayList<String>(List.of(""));
+      var que_tmp = new ArrayList<>(List.of(que.split("-")));
+      var url = new ArrayList<>(List.of(""));
+      var date = new ArrayList<>(List.of(""));
       var numbers = new ArrayList<>(List.of(""));
       var request_tmp = new ArrayList<String>();
 
       url.set(0, que_tmp.get(0).contains("http") ? que_tmp.get(0).trim()
-          : search_title(que_tmp.get(0).trim()).get(0));
-      title.add(queue.indexOf(que), label_title.get(label_url.lastIndexOf(url.get(0))));
+          : label_URL.get(label_title.indexOf(que_tmp.get(0).trim())));
+      title.add(queue.indexOf(que), label_title.get(label_URL.indexOf(url.get(0))));
       var add_time_tmp = url.get(0).contains("date") && date_in;
       que_tmp.forEach((tmp) -> {
         if (tmp.trim().matches("date \\d+~\\d+")) {
@@ -50,16 +49,15 @@ public class selecter extends config {
           numbers.set(0, tmp.trim().split(" ")[1]);
         }
         if (tmp.trim().matches("(request) \\S*")) {
-          request_tmp.addAll(Arrays.asList(tmp.trim().split(" ")[1].split("\\.")));
+          request_tmp.addAll(List.of(tmp.trim().split(" ")[1].split("\\.")));
         }
       });
       try {
         batch_num(url.get(0), numbers.get(0)).forEach(
-            (num) -> batch_time(url.get(0), date.get(0)).forEach((time) -> {
+            (num) -> batch_time(url.get(0), date.get(0)).forEach(time -> {
               try {
-                var path = downloads_dir + label_folder.get(label_url.lastIndexOf(url.get(0)))
-                    + System.getProperty("file.separator") + check.UrlToName(
-                    url.get(0).split("@Post:")[0]);
+                var path = downloads_dir + label_folder.get(label_URL.indexOf(url.get(0)))
+                    + File.separator + check.UrlToName(url.get(0).split("@Post:")[0]);
                 if (url.get(0).contains("@num")) {
                   path = path.concat("_" + num);
                 }
@@ -151,7 +149,7 @@ public class selecter extends config {
     mark = (ArrayList<Integer>[]) engine.get("out");
   }
 
-  public String mark_exp_val() throws Exception {
+  public String mark_exp_val() {
     var out = "";
 
     for (var count_ses = 0; count_ses < session.length; count_ses++) {
@@ -162,7 +160,7 @@ public class selecter extends config {
           tmp.add(session[count_ses].get(count));
           tmp.add(session[count_ses].get(count + count_req));
         }
-        var exp = new expectval(tmp, mark[count_ses]);
+        var exp = new expect_val(tmp, mark[count_ses]);
         out =
             "\n" + title.get(count_ses) + " day: " + exp.compare("D") + " week: " + exp.compare("W")
                 + " month: " + exp.compare("M") + " half year: " + exp.compare("HY") + " year: "
@@ -173,12 +171,15 @@ public class selecter extends config {
   }
 
   public String getRequest() {
-    var out = "";
+    String out;
     var count = 0;
+    var req_tmp = "";
+
     for (ArrayList<String> tmp : request) {
-      out = out.concat(count + "." + tmp + " ");
+      req_tmp = req_tmp.concat(count + "." + tmp + " ");
       count++;
     }
+    out = req_tmp;
     return out;
   }
 
